@@ -6,7 +6,6 @@ bin/jekyll
 jekyll.gemspec
 lib/jekyll.rb
 lib/jekyll/albino.rb
-lib/jekyll/blocks.rb
 lib/jekyll/converters/csv.rb
 lib/jekyll/converters/mephisto.rb
 lib/jekyll/convertible.rb
@@ -15,11 +14,15 @@ lib/jekyll/layout.rb
 lib/jekyll/page.rb
 lib/jekyll/post.rb
 lib/jekyll/site.rb
+lib/jekyll/tags/highlight.rb
+lib/jekyll/tags/include.rb
 test/helper.rb
+test/source/_includes/sig.textile
 test/source/_layouts/default.html
 test/source/_layouts/simple.html
 test/source/_posts/2008-10-18-foo-bar.textile
 test/source/_posts/2008-11-21-complex.textile
+test/source/_posts/2008-12-13-include.textile
 test/source/css/screen.css
 test/source/index.html
 test/source/posts/2008-12-03-permalinked-post.textile
