@@ -1,3 +1,7 @@
+==
+  * Major Features
+    * Include files in _includes with {% include x.textile %}
+
 == 0.1.5 / 2008-12-12
   * Major Features
     * Code highlighting with Pygments if --pygments is specified
